--- a/index.html
+++ b/index.html
@@ -1,13 +1,102 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chucks Industries</title>
-</head>
-<body>
-  <h1>Welcome to Chucks Industries</h1>
-  <p>Website is working in any browser.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chucks Industries</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <style>
+      body {
+        font-family: 'Poppins', sans-serif;
+        margin: 0;
+        background: #f9f9f9;
+        color: #333;
+      }
+      header {
+        background: linear-gradient(135deg, #0d3b66, #0077b6);
+        color: white;
+        padding: 50px 20px;
+        text-align: center;
+      }
+      header h1 {
+        font-size: 2.5em;
+        margin: 0;
+      }
+      section {
+        padding: 30px 20px;
+      }
+      .booking, .testimonials, .clients {
+        background: white;
+        margin: 20px auto;
+        max-width: 800px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      }
+      .booking iframe {
+        border: none;
+        width: 100%;
+        height: 500px;
+      }
+      .social {
+        margin-top: 30px;
+        text-align: center;
+      }
+      .social a {
+        margin: 0 10px;
+        padding: 12px 20px;
+        display: inline-block;
+        border-radius: 25px;
+        background-color: #25D366;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+      }
+      .social a.fb {
+        background-color: #1877F2;
+      }
+      footer {
+        text-align: center;
+        font-size: 0.9em;
+        padding: 20px;
+        background: #eee;
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+
+    <header>
+      <h1>Welcome to Chucks Industries</h1>
+      <p>Your trusted partner for innovation, services, and success.</p>
+    </header>
+
+    <section class="booking">
+      <h2>Book a Consultation</h2>
+      <iframe src="https://calendar.google.com/calendar/embed?src=yourbookingcalendarurl&ctz=Africa%2FLagos"></iframe>
+    </section>
+
+    <section class="testimonials">
+      <h2>What Our Clients Say</h2>
+      <p>“Chucks Industries helped us grow beyond our imagination.” – TechVille Ltd</p>
+      <p>“Professional and always on time. Highly recommended!” – Creative Tribe</p>
+    </section>
+
+    <section class="clients">
+      <h2>Our Clients</h2>
+      <p>✔️ TechVille</p>
+      <p>✔️ CreativX</p>
+      <p>✔️ EcoBiz Group</p>
+    </section>
+
+    <div class="social">
+      <a href="https://wa.me/2349076972932" target="_blank">Chat on WhatsApp</a>
+      <a href="https://facebook.com/yourpage" target="_blank" class="fb">Visit on Facebook</a>
+    </div>
+
+    <footer>
+      &copy; 2025 Chucks Industries. All rights reserved.
+    </footer>
+
+  </body>
 </html>
